--- a/b1.html
+++ b/b1.html
@@ -11,7 +11,7 @@
     </style>
     
     <title>なにさん やっぱりネタが...</title>
-    <a href="index.html"><img src="Nanisan.comver2.jpg" width="500" height="auto"></a>
+    <a href="index.html"><img src="Nanisan.comver2.png" width="500" height="auto"></a>
     <style>
         .bg-title {
           width: 390px;
