--- a/b1.html
+++ b/b1.html
@@ -1,4 +1,5 @@
 <head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         a:hover img {
   filter: alpha(opacity=70);
