--- a/b1.html
+++ b/b1.html
@@ -13,18 +13,11 @@
     
     <title>なにさん やっぱりネタが...</title>
     <a href="index.html"><img src="Nanisan.comver2.png" width="500" height="auto"></a>
-    <style>
-        .bg-title {
-          width: 390px;
-          height: 80px;
-          background-color: #00c800;
-        }
-      </style>
 </head>
 <body>
     <div class="bg-title">
         <h3>2024/10/27 (日)</h3>
-        <h1>【なにさん やっぱりネタが...】</h1>
+        <h1 style="background-color: #00c800;">【なにさん やっぱりネタが...】</h1>
     </div>
     <p>どうも。なにさんです。</p>
     <p>普通にネタが思いつかない。ないわけではないけどね。</p>
