--- a/b1.html
+++ b/b1.html
@@ -10,6 +10,12 @@
   上から50、0.5、0.5にします*/
 }
     </style>
+    <style>
+body {
+  background-image: url(background.png);
+  background-size: auto;
+}
+    </style>
     
     <title>なにさん やっぱりネタが...</title>
     <a href="index.html"><img src="Nanisan.comver2.png" width="500" height="auto"></a>
