--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ body {
 </head>
 <body>
     <div style="background-color: #00c800;">
+    <a href="b2.html">
+    <h3 style="color: black;">2024/10/31(木)</h3>
+    <h1>【緊急】腹が減った(???)</h1>
+    </a>
+    </div>
+    <h1></h1>
+    <div style="background-color: #00c800;">
     <a href="b1.html">
     <h3 style="color: black;">2024/10/27(日)</h3>
     <h1>【なにさん やっぱりネタが...】</h1>
