--- a/b2.html
+++ b/b2.html
@@ -17,18 +17,18 @@ body {
 }
     </style>
     
-    <title>なにさん やっぱりネタが...</title>
+    <title>【緊急】腹が減った(???)</title>
     <a href="index.html"><img src="Nanisan.comver2.png" width="500" height="auto"></a>
 </head>
 <body>
-    <div class="bg-title"style="background-color: #00c800;">
-        <h3>2024/10/27 (日)</h3>
-        <h1>【なにさん やっぱりネタが...】</h1>
+    <div class="bg-title" style="background-color: #00c800;">
+        <h3>2024/10/31 (木)</h3>
+        <h1 style="background-color: #00c800;">【緊急】腹が減った(???)</h1>
     </div>
     <p>どうも。なにさんです。</p>
-    <p>普通にネタが思いつかない。ないわけではないけどね。</p>
-    <p>動画にするのがめんどくさいから言い訳してるだけかもだけど。</p>
-    <p>とりあえずリクエストして。</p>
+    <p>凄く腹が減ったのに何もない。</p>
+    <p>ここんところ食欲が暴走してるんよね</p>
+    <p>ちゃんと食べてるはずなのになぁ</p>
 
-    <h3 style="color: red;"> 具体的にね。</h3>
+    <h3 style="color: red;">太らないよね？</h3>
 </body>
