--- a/d2.html
+++ b/d2.html
@@ -22,13 +22,13 @@ body {
 </head>
 <body>
     <div class="bg-title" style="background-color: #00c800;">
-        <h3>2024/11/1 (金)</h3>
+        <h3>2024/11/29 (金)</h3>
         <h1 style="background-color: #00c800;">創作譜面を配布</h1>
     </div>
     <p>どうも。なにさんです。</p>
-    <p>創作譜面を配布します。</p>
-    <p style="color: red;">「トリック・オア・トリート オフィス大脱走」</p>
-    <p>という曲です</p>
+    <p>創作譜面を配布します。(再)</p>
+    <p style="color: red;">「Bang-Bang-Bang-Boom」</p>
+    <p>という曲です。</p>
 
-    <a href="トリック・オア・トリート オフィス大脱走.zip"><img src="d1.png" width="500" height="auto"></a>
+    <a href="Bang Bang Bang Boom.zip"><img src="d2.png" width="500" height="auto"></a>
 </body>
