--- a/UQPKU2oTlis.html
+++ b/UQPKU2oTlis.html
@@ -20,6 +20,7 @@ body {
 
 </head>
 <body style="text-align: center;">
-    <a href="なにさんによる創作段位&譜面.zip"><h1 style="font-size:50px">なにさんによる創作段位&譜面.zip</h1></a>
-    <p>※クソ段位</p>
+    <a href="なにさんによる創作段位&譜面.zip"><h1 style="font-size:50px">修正版</h1></a>
+    <p>クソ段位ですか？</p>
+    <p style="font-size:50px;">人による</p>
 </body>
