--- a/UQPKU2oTlis.html
+++ b/UQPKU2oTlis.html
@@ -1,26 +1,143 @@
+<html lang="ja">
 <head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <style>
-        a:hover img {
-  filter: alpha(opacity=70);
-  -moz-opacity: 0.7;
-  opacity: 0.7;
-  /*画像を70%の不透明度に
-  もし50%にしたいときは
-  上から50、0.5、0.5にします*/
-}
-    </style>
-    <style>
-body {
-  background-image: url(background.png);
-  background-size: auto;
-}
-    </style>
-    
+    <style>    
+        a {
+            color:black;
+            text-decoration: none;
+        }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px; /* グループ間のスペース */
+    }
+    .group {
+      width: 290px;
+      text-align: center;
+    }
+    .auto-wrap {
+      width: 290px;
+      white-space: normal;
+      overflow: hidden;
+      text-align: center;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      line-clamp: 2;
+      box-orient: vertical;
+    }
+    .group2 {
+      width: 200px;
+      text-align: center;
+    }
+    .auto-wrap2 {
+      width: 200px;
+      white-space: normal;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      line-clamp: 2;
+      box-orient: vertical;
+    }
+    .pic {
+      border-radius: 7px;
+    }
+    body {
+        font-family: "DFPKanteiryu", sans-serif;
+    }
+    .container1 {
+            position: relative;
+            display: inline-block;
+        }
 
+        .container {
+           display: flex;
+           flex-wrap: wrap;
+           gap: 5px; /* グループ間のスペース */
+        }
+
+        .container2 {
+            width: 300px;
+            padding: 10px;
+            border: 5px solid #e8e8e8;
+            border-radius: 7px;
+            outline: 2px solid black;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            background-color: #e8e8e8;
+
+        }
+        .top {
+            display: flex;
+            align-items: start;
+        }
+        .top img {
+            width: 20px;
+            height: auto;
+        }
+        .bottom {
+            display: flex;
+            align-items: center;
+        }
+        .bottom img {
+            width: 100px;
+            height: 75px;
+            object-fit: cover;
+        }
+
+        .image {
+            display: block;
+            width: 290px;
+            height: auto;
+        }
+        .text-overlay {
+            position: absolute;
+            bottom: 5px;
+            right: 5px;
+            background: rgba(0, 0, 0, 0.65);
+            color: white;
+            padding: 5px 5px;
+            border-radius: 5px;
+            font-size: 12px;
+        }
+        .text-below {
+            text-align: center;
+            font-size: 16px;
+            margin-top: 5px;
+        }
+
+        .title:hover {
+          filter: alpha(opacity=70);
+          -moz-opacity: 0.7;
+          opacity: 0.7;
+        }
+    </style>
+    <title>Nani!?</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body style="text-align: center;">
-    <a href="なにさんによる創作段位&譜面.zip"><h1 style="font-size:50px">修正版</h1></a>
-    <p>クソ段位ですか？</p>
-    <p style="font-size:50px;">人による</p>
+<body style="background-image: url(https://nanisan0723.github.io/Nanisan-blog-test/background.png);">
+    <a href="https://nanisan0723.github.io/Nanisan-Secret-movie/success"><img src="https://nanisan0723.github.io/Nanisan-blog-test/Nanisan.comver2.png" width="300" height="auto" class="title"><span style="font-size:27px">創作譜面段位</span></a>
+    <h1></h1>
+  <div class="container">
+    <a href="新しいフォルダー/なにさんによる創作段位&譜面.zip">
+      <div class="container1">
+        <img src="新しいフォルダー/1.png" class="image pic">
+        <div class="text-overlay">★10</div>
+      </div>
+    <p class="auto-wrap">なにさんによる創作段位&譜面</p>
+    </a>
+    <a href="新しいフォルダー/課題曲、すべて作ってみた。.zip">
+      <div class="container1">
+        <img src="新しいフォルダー/2.png" class="image pic">
+        <div class="text-overlay">★10</div>
+      </div>
+    <p class="auto-wrap">課題曲、すべて作ってみた。</p>
+    </a>
+  </div>
 </body>
+</html>
