--- a/UQPKU2oTlis.html
+++ b/UQPKU2oTlis.html
@@ -129,7 +129,7 @@
         <img src="新しいフォルダー/3.png" class="image pic">
         <div class="text-overlay">★10</div>
       </div>
-    <p class="auto-wrap">課題曲、すべて作ってみた。</p>
+    <p class="auto-wrap">打倒！織田信長</p>
     </a>
     <a href="新しいフォルダー/課題曲、すべて作ってみた。.zip">
       <div class="container1">
