--- a/UQPKU2oTlis.html
+++ b/UQPKU2oTlis.html
@@ -124,6 +124,14 @@
     <a href="https://nanisan0723.github.io/Nanisan-Secret-movie/success"><img src="https://nanisan0723.github.io/Nanisan-blog-test/Nanisan.comver2.png" width="300" height="auto" class="title"><span style="font-size:27px">創作譜面段位</span></a>
     <h1></h1>
   <div class="container">
+    <a href="新しいフォルダー/なにさん的創作譜面七段.zip">
+      <div class="container1">
+        <img src="新しいフォルダー/4.png" class="image pic">
+        <div class="text-overlay">★8</div>
+      </div>
+    <p class="auto-wrap">僕の内訳 可:269 不可:29 連打:88</p>
+    </a>
+    <div style="opacity: 10%;">
     <a href="新しいフォルダー/打倒！織田信長.zip">
       <div class="container1">
         <img src="新しいフォルダー/3.png" class="image pic">
@@ -131,6 +139,7 @@
       </div>
     <p class="auto-wrap">打倒！織田信長</p>
     </a>
+    </div>
     <a href="新しいフォルダー/課題曲、すべて作ってみた。.zip">
       <div class="container1">
         <img src="新しいフォルダー/2.png" class="image pic">
