--- a/UQPKU2oTlis.html
+++ b/UQPKU2oTlis.html
@@ -121,7 +121,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body style="background-image: url(https://nanisan0723.github.io/Nanisan-blog-test/background.png);">
-    <a href="https://nanisan0723.github.io/Nanisan-blog-test/UQPKU2oTlis"><img src="https://nanisan0723.github.io/Nanisan-blog-test/Nanisan.comver2.png" width="300" height="auto" class="title"><span style="font-size:27px">創作譜面段位</span></a>
+    <a href="https://nanisan0723.github.io/Nanisan-blog-test/UQPKU2oTlis"><img src="https://nanisan0723.github.io/Nanisan-blog-test/新しいフォルダー/DanLogo.png" width="300" height="auto" class="title"></a>
     <h1></h1>
   <div class="container">
     <a href="新しいフォルダー/なにさん的創作譜面七段.zip">
