--- a/新しいフォルダー/2Kvj8reN4q7.html
+++ b/新しいフォルダー/2Kvj8reN4q7.html
@@ -180,7 +180,7 @@
   <div style="display:flex; justify-content:center;">
     <img src="https://taiko.namco-ch.net/taiko/images/special/dani_dojo_gaiden/stit_themelist.png">
   </div>
-          <h1 style="font-size: 20px;">ㅤ</h1>
+          <h1 style="font-size: 20px;">QRコードをクリックすればダウンロードされます</h1>
       <div class="list">
     <div class="card" type="button" aria-expanded="false">
       <div class="wrap">
